@@ -1,4 +1,4 @@
-mobac.version=1.9 preview 1.01
+mobac.version=1.9 preview 1.02
 mobac.revision.hide=false
 mobac.updateurl=http://mobac.dnsalias.org/mapsources-update/v1/mapsources.properties
 mobac.mappackversion=1
