@@ -27,6 +27,8 @@
     sub-directory
  + All direcories used by MOBAC can be pre-configured via file 
     directories.ini in the MOBAC program directory
+ + CustomMap: new parameter: ignoreErrors and backGroundColor can have
+    alpha transparency parameter
 
  1.8 final: (2010-10-31)
  + New map source: New Zealand Topographic Maps
